# mdApp

./: .prettierrc.json  :w  ;  README.md  \  index.html  jest.config.json  package-lock.json  package.json  poc.html  poc2.js  poc3.js  vitest.config.ts
src/: App.css  App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  types.rs
src-tauri/src/utils/: stringBuilder.rs  tokenizerUtils.rs  transformations.rs
src/components/TextArea/: index.tsx  listeners.ts
src/components/editableDocument/: index.tsx
src/components/toolbar/: index.tsx  types.ts
src/context/keyboardShortcuts/: index.tsx
src/controllers/toolbar/: index.ts
src/controllers/toolbar/toolbarFunctions/: handleAddTableClick.ts  handleBlockCodeClick.ts  handleBoldClick.ts  handleIncreaseFontSizeClick.ts  handleIndentClick.ts  handleInlineCodeClick.ts  handleInsertLinkClick.ts  handleInsertOrderedListClick.ts  handleInsertUnorderedListClick.ts  handleOutdentClick.ts  handleUnderlineClick.ts
src/controllers/toolbar/toolbarFunctions/__tests__/: handeUnderlineClick.js  handleBoldClick.js  handleBoldClick.test.ts  handleUnderlineClick.js
src/utils/:  overwrite.ts  contentEditableFocus.ts  contentEditableReturn.ts  getAllChildrenInSelection.ts  getRangeSelection.ts  keyboardEventHandler.ts
src/views/editor/: controller.ts  index.tsx  style.css  types.ts
