[package]
name = "mdApp"
version = "0.0.0"
description = "A rust-JS powered word editor"
authors = ["KooperL"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xi-core-lib = "0.3.0"
tendril = "0.4"
html5ever = { version = "0.26" }
markup5ever = { version = "0.11" }
xml5ever = { version = "0.17" }
markup5ever_rcdom = "0.2.0"
quick-xml = "0.21.0"
xmlparser = "0.13.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
